--- a/css/global.css
+++ b/css/global.css
@@ -132,3 +132,10 @@ table tbody tr:hover .idx-column {
 table tr {
   line-height: 25px !important;
 }
+.activeRow td {
+  border-top: 1px solid var(--lighterAccentColor) !important;
+  border-bottom: 1px solid var(--lighterAccentColor) !important;
+}
+.activeRow .idx-column {
+  color: var(--accentColor);
+}
